fix: 完善注册积分功能